src/app/shared-modules/layout/sidebar/sidebar.css
@import "tailwindcss";
@import "primeicons/primeicons.css";

/* =========================
   BACKDROP
========================= */

.sidebar-backdrop {
  @apply fixed inset-0 bg-black/0 opacity-0 invisible pointer-events-none transition-opacity duration-300 ease-in-out z-900;
}

.sidebar-backdrop.active {
  @apply bg-black/50 opacity-100 visible pointer-events-auto;
}

/* =========================
   SIDEBAR BASE (DESKTOP FIRST)
========================= */

.layout-sidebar {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 20rem;
  flex: 0 0 20rem;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  background: var(--secondary-color, #1f2937);
  color: #fff;
  transition: width 300ms ease, flex-basis 300ms ease, transform 300ms ease;
  will-change: width, transform;
  z-index: 950;
}

/* Desktop collapsed state */
.layout-sidebar.desktop-inactive {
  @apply w-0 overflow-hidden;
}

.layout-menu {
  @apply flex-1 overflow-y-auto;

  li {
    @apply whitespace-nowrap overflow-hidden text-ellipsis
  }
}

/* Sidebar Header */
.sidebar-header {
  @apply flex items-center p-4 border-b border-gray-300;

  p {
    @apply whitespace-nowrap overflow-hidden text-ellipsis
  }
}

.sidebar-avatar {
  @apply w-10 h-10 rounded-full mr-2
}

.sidebar-student-name {
  @apply text-sm font-semibold text-white truncate
}

.sidebar-entropy {
  @apply text-xs text-white/60 truncate
}

.item-a {
  @apply items-center gap-3 px-3 py-2 rounded-lg text-sm font-semibold transition-colors duration-150
}

.sidebar-item-text {
  @apply truncate flex-1 ml-2;
}

/* Sidebar Footer */
.sidebar-footer {
  @apply sticky flex justify-start border-t border-white/6;
}

.logout-button {
  @apply w-full p-2 flex justify-between;
}

/* =========================
   MOBILE BEHAVIOR
========================= */

@media (max-width: 991px) {
  .layout-sidebar {
    position: fixed;
    top: 0;
    left: 0;
    width: 80%;
    height: 100%;
    transform: translateX(-100%);
    transition: transform 300ms ease;
    will-change: transform;
    z-index: 950;
    overflow-y: hidden;
  }

  /*TODO Faire en sorte que bouton logout soit tout le temps visible en bas à gauche*/
  .layout-sidebar.mobile-active {
    transform: translateX(0);
  }

  .layout-sidebar.desktop-inactive {
    @apply flex-none w-4/5;
  }
}


/* =========================
   DESKTOP RULES ONLY
========================= */

@media (min-width: 992px) {
  .layout-sidebar {
    @apply relative;
    transform: none !important;
  }

  .sidebar-backdrop {
    @apply hidden;
  }
}

